sna/gen4: Workaround render corruption with multiple SF threads

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=57410
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>